Bug 527018 - [refactoring] Replace use of Number constructors by valueOf
Includes version increment for Eclipse Photon 4.8

Change-Id: If46d17f3fd08fea451cdec233a2d352aa20a1b8c
Signed-off-by: Karsten Thoms <karsten.thoms@itemis.de>